fixed player font on mobile view

--- a/css/squeleton.css
+++ b/css/squeleton.css
@@ -1072,7 +1072,7 @@ footer{
       margin-top: -1px;
     }
     p#player-text{ /* not sure if this is doing anything ? */
-      font-size: 2vmax;
+      font-size: 3vmax;
       padding: 0.5%;
       width: 100%;
       height: 4%;
